--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -31,7 +31,7 @@
                         <MenuItem Header="Import XML" Name="ImporXML" Click="ImporXML_Click"></MenuItem>
                         <MenuItem Header="Import CSV" Name="ImportCSV" Click="ImportCSV_Click"></MenuItem>
                         <Separator />
-                        <MenuItem Header="Delete Element" Name="deletelem" Click="deletelem_Click"></MenuItem>
+                        <MenuItem Header="Remove Element" Name="deletelem" Click="deletelem_Click"></MenuItem>
                     </ContextMenu>
                 </TextBlock.ContextMenu>
             </TextBlock>
@@ -49,7 +49,7 @@
             <TextBlock FontStyle="Italic" Text="{Binding Name}">
                  <TextBlock.ContextMenu>
                      <ContextMenu Name="Designer_menu_attr">
-                         <MenuItem Header="Delete" Name="deleattr" Click="deleattr_Click"/>
+                         <MenuItem Header="Remove" Name="deleattr" Click="deleattr_Click"/>
                      </ContextMenu>
                   </TextBlock.ContextMenu>
             </TextBlock>
