--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -21,15 +21,13 @@
                 <TextBlock.ContextMenu>
                     <ContextMenu Name="Designer_menu">
                         <MenuItem Header="Add Attribute" Name="addattr" Click="addattr_Click" />
-                        <MenuItem Header="Add Elemnet" Name="addelem" Click="addelem_Click">
-                        </MenuItem>
+                        <MenuItem Header="Add Elemnet" Name="addelem" Click="addelem_Click" />
                         <Separator />
-                        <MenuItem Header="Import Database Tables" Name="ImporDBtble">   
-                        </MenuItem>
-                        <MenuItem Header="Import Query" Name="impoQry"></MenuItem>
-                        <MenuItem Header="Import XSD" Name="imporXSD" Click="imporXSD_Click"></MenuItem>
-                        <MenuItem Header="Import XML" Name="ImporXML" Click="ImporXML_Click"></MenuItem>
-                        <MenuItem Header="Import CSV" Name="ImportCSV" Click="ImportCSV_Click"></MenuItem>
+                        <MenuItem Header="Import Database Tables" Name="ImporDBtble" Click="ImporDBtble_Click" />
+                        <MenuItem Header="Import Query" Name="impoQry" />
+                        <MenuItem Header="Import XSD" Name="imporXSD" Click="imporXSD_Click" />
+                        <MenuItem Header="Import XML" Name="ImporXML" Click="ImporXML_Click" />
+                        <MenuItem Header="Import CSV" Name="ImportCSV" Click="ImportCSV_Click" />
                         <Separator />
                         <MenuItem Header="Remove" Name="deletelem" Click="deletelem_Click"></MenuItem>
                     </ContextMenu>
