--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xs="clr-namespace:System.Xml.Schema;assembly=System.Xml"
