--- a/WpfApplication1/Wizard/ImportWizard.xaml
+++ b/WpfApplication1/Wizard/ImportWizard.xaml
@@ -1,5 +1,5 @@
 ﻿<NavigationWindow x:Class="WpfApplication1.ImportWizard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Import Wizard" Height="300" Width="300">
+        Title="Import Wizard" Width="500" Height="300">
 </NavigationWindow>
