--- a/WpfApplication1/App.xaml
+++ b/WpfApplication1/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="WpfApplication1.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             xmlns:l="clr-namespace:WpfApplication1">
     <Application.Resources>
-         
+        <l:ObservableConverter x:Key="observable" />
     </Application.Resources>
 </Application>
