--- a/WpfApplication1/Wizard/ImportType.xaml
+++ b/WpfApplication1/Wizard/ImportType.xaml
@@ -4,20 +4,17 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="87" d:DesignWidth="277"
+    Width="400"
 	Title="ImportType">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <RadioButton Name="Query" Grid.Column="1" Content="Qurey" HorizontalAlignment="Left" Margin="10"/>
-        <RadioButton Name="ImportTables" Content="Import Tables" HorizontalAlignment="Right" Margin="10" IsChecked="True"/>
-        <Button Content="Next"  Grid.Column="1"   Grid.Row="1"  Click="Button_Click" Width="150" HorizontalAlignment="Right" Margin="5" />
+        <RadioButton Name="ImportTables" Content="Import Tables" Margin="10" IsChecked="True"/>
+        <RadioButton Name="Query" Grid.Row="1" Content="Qurey" HorizontalAlignment="Left" Margin="10"/>
+        <Button Content="Next"  Grid.Row="2"  Click="Button_Click" Width="150" HorizontalAlignment="Right" Margin="5" />
     </Grid>
 </Page>
