--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xs="clr-namespace:System.Xml.Schema;assembly=System.Xml"
+        xmlns:xl="clr-namespace:System.Xml;assembly=System.Xml"
         xmlns:l="clr-namespace:WpfApplication1"
         xmlns:wpg="clr-namespace:WPG;assembly=WPG"
         Title="MainWindow"
@@ -12,6 +13,7 @@
         <HierarchicalDataTemplate DataType="{x:Type xs:XmlSchemaElement}">
             <HierarchicalDataTemplate.ItemsSource>
                 <MultiBinding Converter="{StaticResource unionConverter}">
+                    <Binding Path="Annotation.Items" Converter="{StaticResource observable}" />
                     <Binding Path="SchemaType.Attributes" Converter="{StaticResource observable}" /> 
                     <Binding Path="SchemaType.Particle.Items" Converter="{StaticResource observable}" />
                 </MultiBinding>
@@ -33,6 +35,22 @@
                 </TextBlock.ContextMenu>
             </TextBlock>
         </HierarchicalDataTemplate>
+
+        <HierarchicalDataTemplate DataType="{x:Type xs:XmlSchemaAppInfo}">
+            <HierarchicalDataTemplate.ItemsSource>
+                <Binding Path="Markup" Converter="{StaticResource observable}" />
+            </HierarchicalDataTemplate.ItemsSource>
+
+            <TextBlock Text="[appinfo]" />
+        </HierarchicalDataTemplate>
+
+        <DataTemplate DataType="{x:Type xl:XmlElement}">
+            <StackPanel DataContext="{Binding Converter={StaticResource observable}}" Orientation="Horizontal">
+                <TextBlock Text="{Binding Name}" FontStyle="Italic" />
+                <TextBlock Text=": " />
+                <TextBlock Text="{Binding InnerText}" FontStyle="Italic" />
+            </StackPanel>
+        </DataTemplate>
 
         <HierarchicalDataTemplate DataType="{x:Type xs:XmlSchemaChoice}">
             <HierarchicalDataTemplate.ItemsSource>
