--- a/WpfApplication1/App.xaml
+++ b/WpfApplication1/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="WpfApplication1.App"
+﻿<Application x:Class="SchemaEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml"
-             xmlns:l="clr-namespace:WpfApplication1">
+             xmlns:l="clr-namespace:SchemaEditor">
     <Application.Resources>
         <l:ObservableConverter x:Key="observable" />
     </Application.Resources>
