--- a/WpfApplication1/Wizard/ImportWizard.xaml
+++ b/WpfApplication1/Wizard/ImportWizard.xaml
@@ -1,4 +1,4 @@
-﻿<NavigationWindow x:Class="WpfApplication1.ImportWizard"
+﻿<NavigationWindow x:Class="SchemaEditor.ImportWizard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Import Wizard" Width="500" Height="300">
