--- a/Mapper/MainWindow.xaml
+++ b/Mapper/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:uc="clr-namespace:Mapper"
+        xmlns:sxml="clr-namespace:System.Xml;assembly=System.Xml"
         Title="MainWindow">
     
     <Window.Resources>
@@ -12,6 +13,41 @@
             <Setter Property="HorizontalContentAlignment" Value="Left"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
+
+        <uc:XsltNodeTemplateSelector x:Key="templateselector" />
+
+        <DataTemplate x:Key="xslDefaultTemplate">
+            <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
+        </DataTemplate>
+        
+        <DataTemplate x:Key="xslRootTemplate">
+            <StackPanel>
+                <TextBlock>Root</TextBlock>
+                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="xslTemplate">
+            <StackPanel>
+                <TextBlock>Template</TextBlock>
+                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="xslValueOf">
+            <StackPanel>
+                <TextBlock>ValueOf</TextBlock>
+                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="xslForEach">
+            <StackPanel>
+                <TextBlock>ForEach</TextBlock>
+                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
+            </StackPanel>
+        </DataTemplate>
+
     </Window.Resources>
     
     <DockPanel x:Name="canvas" ClipToBounds="True" Background="Transparent" Focusable="True">
@@ -60,8 +96,14 @@
                 </TreeViewItem>
             </TreeView>
         </ScrollViewer>
-        <StackPanel>
+        <!--<StackPanel>
             <uc:Transformation Source="{Binding ElementName=sourcenode}" Target="{Binding ElementName=targetnode}"  />
-        </StackPanel>
+        </StackPanel>-->
+
+        <ItemsControl x:Name="items" DataContext="{Binding Stylesheet}" ItemTemplateSelector="{StaticResource templateselector}">
+            <ItemsControl.ItemsSource>
+                <Binding XPath="//xsl:template"/>
+            </ItemsControl.ItemsSource>
+        </ItemsControl>
     </DockPanel>
 </Window>
