--- a/Mapper/Transformation.xaml
+++ b/Mapper/Transformation.xaml
@@ -5,16 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:uc="clr-namespace:Mapper"
              mc:Ignorable="d"
-             Loaded="transformation_Loaded"
-             x:Name="uc">
+             Loaded="transformation_Loaded">
     
     <Canvas Name="canvas">
-        <TextBlock Text="{Binding EndPoint, ElementName=uc}" />
         <Line Stroke="LightGray" StrokeThickness="2" 
-              X1="{Binding StartPoint.X, ElementName=uc}"
-              Y1="{Binding StartPoint.Y, ElementName=uc}"
-              X2="{Binding EndPoint.X, ElementName=uc}"
-              Y2="{Binding EndPoint.Y, ElementName=uc}"
+              X1="{Binding StartPoint.X}"
+              Y1="{Binding StartPoint.Y}"
+              X2="{Binding EndPoint.X}"
+              Y2="{Binding EndPoint.Y}"
               />
     </Canvas>
 </UserControl>
