--- a/Mapper/Controls/Schema.xaml
+++ b/Mapper/Controls/Schema.xaml
@@ -23,7 +23,14 @@
             </HierarchicalDataTemplate.ItemsSource>
             
             <StackPanel Orientation="Horizontal">
-                <TextBlock DataContext="{Binding Converter={StaticResource observable}}" Text="{Binding Name}" Padding="2,0" />
+                <TextBlock DataContext="{Binding Converter={StaticResource observable}}" Text="{Binding Name}" Padding="2,0" 
+                           Loaded="XmlElement_Loaded"
+                           PreviewMouseMove="Node_PreviewMouseMove"
+                           DragEnter="Node_DragEnter"
+                           DragOver="Node_DragOver"
+                           DragLeave="Node_DragLeave"
+                           Drop="Node_Drop"
+                           AllowDrop="True" />
                 <Thumb Width="0" Height="0" Background="Red" />
             </StackPanel>
         </HierarchicalDataTemplate>
