--- a/Mapper/MainWindow.xaml
+++ b/Mapper/MainWindow.xaml
@@ -1,169 +1,21 @@
 ﻿<Window x:Class="Mapper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        xmlns:uc="clr-namespace:Mapper"
-        xmlns:sxml="clr-namespace:System.Xml;assembly=System.Xml"
+        xmlns:l="clr-namespace:Mapper"
+        Title="Mapper"
         Closing="Window_Closing"
-        Title="MainWindow">
-    
-    <Window.Resources>
-        <Style x:Key="ExpandedStyle">
-            <Setter Property="TreeViewItem.IsExpanded" Value="True" />
-        </Style>
-        <Style TargetType="{x:Type TreeViewItem}">
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-        </Style>
-
-        <uc:XsltNodeTemplateSelector x:Key="templateselector" />
-        
-        <uc:ConcatConverter x:Key="concatConverter" />
-        <uc:ContentToDocumentConverter x:Key="contentConverter" />
-        <uc:ContentPathsConverter x:Key="sourcePathsConverter" />
-        <uc:ThumbsPathConverter x:Key="thumbsPathConverter" />
-        <uc:NodePortFinderConverter x:Key="sourceNodePortFinder" />
-        <uc:NodePortFinderConverter x:Key="targetNodePortFinder" />
-        
-        <sys:String x:Key="seperator">/</sys:String>
-        <sys:String x:Key="arrow">--></sys:String>
-
-        <DataTemplate x:Key="unknownNodeTemplate">
-            <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
-        </DataTemplate>
-
-        <DataTemplate x:Key="resultNodeTemplate">
-            <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}">
-                <uc:Context.TargetContext>
-                    <MultiBinding Converter="{StaticResource concatConverter}">
-                        <Binding Path="(uc:Context.TargetContext)" RelativeSource="{RelativeSource AncestorType=FrameworkElement}" />
-                        <Binding Source="{StaticResource seperator}" />
-                        <Binding Path="LocalName" />
-                    </MultiBinding>
-                </uc:Context.TargetContext>
-            </ItemsControl>
-        </DataTemplate>
-        
-        <DataTemplate x:Key="root_template">
-            <StackPanel>
-                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
-            </StackPanel>
-        </DataTemplate>
-
-        <DataTemplate x:Key="template">
-            <StackPanel>
-                <ItemsControl  ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
-            </StackPanel>
-        </DataTemplate>
-
-        <DataTemplate x:Key="for-each">
-            <StackPanel>
-                <ItemsControl ItemsSource="{Binding XPath=*}" 
-                    ItemTemplateSelector="{StaticResource templateselector}">
-                    <uc:Context.SourceContext>
-                        <MultiBinding Converter="{StaticResource concatConverter}">
-                            <Binding Path="(uc:Context.SourceContext)" RelativeSource="{RelativeSource AncestorType=FrameworkElement}" />
-                            <Binding Source="{StaticResource seperator}" />
-                            <Binding XPath="@select" />
-                        </MultiBinding>
-                    </uc:Context.SourceContext>
-                </ItemsControl>
-            </StackPanel>
-        </DataTemplate>
-
-        <!--<DataTemplate x:Key="value-of">
-            <StackPanel>
-                <uc:Transformation Source="{Binding ElementName=sourceSchema}" Target="{Binding ElementName=targetSchema}">
-                    <uc:Transformation.SourcePath>
-                        <MultiBinding Converter="{StaticResource concatConverter}">
-                            <Binding Path="(uc:Context.SourceContext)" RelativeSource="{RelativeSource Self}" />
-                            <Binding Source="{StaticResource seperator}" />
-                            <Binding XPath="@select" />
-                        </MultiBinding>
-                    </uc:Transformation.SourcePath>
-                    <uc:Transformation.TargetPath>
-                        <Binding Path="(uc:Context.TargetContext)" RelativeSource="{RelativeSource Self}" />
-                    </uc:Transformation.TargetPath>
-                </uc:Transformation>
-
-                <ItemsControl ItemsSource="{Binding XPath=*}" ItemTemplateSelector="{StaticResource templateselector}" />
-            </StackPanel>
-        </DataTemplate>-->
-
-        <DataTemplate x:Key="mixed-value-of">
-            <uc:BlockControl>
-                <uc:Context.TargetContext>
-                    <MultiBinding Converter="{StaticResource concatConverter}">
-                        <Binding Path="(uc:Context.TargetContext)" RelativeSource="{RelativeSource AncestorType=FrameworkElement}" />
-                        <Binding Source="{StaticResource seperator}" />
-                        <Binding Path="LocalName" />
-                    </MultiBinding>
-                </uc:Context.TargetContext>
-                <uc:BlockControl.HeaderContent>
-                    <Grid>
-                        <TextBlock Text="Converter" Padding="7, 3" />
-                        <!--SOURCE CONNECTORS-->
-                        <ItemsControl>
-                            <ItemsControl.ItemsSource>
-                                <MultiBinding Converter="{StaticResource sourcePathsConverter}">
-                                    <Binding Path="(uc:Context.SourceContext)" RelativeSource="{RelativeSource Self}" />
-                                    <Binding />
-                                </MultiBinding>
-                            </ItemsControl.ItemsSource>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Canvas>
-                                        <Path Stroke="LightGray" StrokeThickness="2">
-                                            <Path.Data>
-                                                <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*">
-                                                    <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
-                                                    <Binding Converter="{StaticResource sourceNodePortFinder}" ConverterParameter="source" />
-                                                    <Binding Path="Port" ElementName="sourceSchema" />
-                                                    <Binding Path="LeftPort" RelativeSource="{RelativeSource AncestorType=uc:BlockControl}" />
-                                                </MultiBinding>
-                                            </Path.Data>
-                                        </Path>
-                                    </Canvas>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                        <!--TARGET CONNECTOR-->
-                        <Canvas>
-                            <Path Stroke="LightGray" StrokeThickness="2">
-                                <Path.Data>
-                                    <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*">
-                                        <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
-                                        <Binding Path="(uc:Context.TargetContext)" RelativeSource="{RelativeSource Self}" Converter="{StaticResource targetNodePortFinder}" ConverterParameter="target" />
-                                        <Binding Path="Port" ElementName="targetSchema" />
-                                        <Binding Path="RightPort" RelativeSource="{RelativeSource AncestorType=uc:BlockControl}" />
-                                    </MultiBinding>
-                                </Path.Data>
-                            </Path>
-                        </Canvas>
-                    </Grid>
-                </uc:BlockControl.HeaderContent>
-                <uc:BlockControl.BlockContent>
-                    <Grid>
-                        <ContentControl HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
-                                        Content="{Binding XPath=., Converter={StaticResource contentConverter}}" />
-                    </Grid>
-                </uc:BlockControl.BlockContent>
-            </uc:BlockControl>
-            
-        </DataTemplate>
-
-    </Window.Resources>
-
-
-    <DockPanel ClipToBounds="True" Background="Transparent" Focusable="True">
-
-        <uc:SchemaControl x:Name="sourceSchema" DockPanel.Dock="Left" Schema="{Binding SourceSchema, Mode=TwoWay}" />
-        <uc:SchemaControl x:Name="targetSchema" DockPanel.Dock="Right" FlowDirection="RightToLeft" Schema="{Binding TargetSchema, Mode=TwoWay}" />
-        
-        <ItemsControl x:Name="items" DataContext="{Binding Stylesheet}" ItemTemplateSelector="{StaticResource templateselector}">
-            <ItemsControl.ItemsSource>
-                <Binding XPath="//xsl:template"/>
-            </ItemsControl.ItemsSource>
-        </ItemsControl>
+        x:Name="window">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="_New" Click="New_Click" />
+                <MenuItem Header="_Open" Click="Open_Click" />
+                <MenuItem Header="_Save" Click="Save_Click" />
+                <MenuItem Header="Save _As" Click="SaveAs_Click" />
+                <Separator />
+                <MenuItem Header="_Exit" Click="Exit_Click" />
+            </MenuItem>
+        </Menu>
+        <l:MapperControl DataContext="{Binding Model, ElementName=window}" />
     </DockPanel>
 </Window>
