--- a/Mapper/Controls/Connector.xaml
+++ b/Mapper/Controls/Connector.xaml
@@ -1,14 +1,11 @@
-﻿<UserControl x:Class="Mapper.Transformation"
+﻿<UserControl x:Class="Mapper.Connector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:uc="clr-namespace:Mapper"
              mc:Ignorable="d"
-             Loaded="transformation_Loaded"
              x:Name="tr">
 
-    <Canvas Name="canvas">
-        <Path Data="{Binding PathCoordinates, ElementName=tr}" Stroke="LightGray" StrokeThickness="2" />
-    </Canvas>
+    <Path Data="{Binding Geometry, ElementName=tr}" Stroke="LightGray" StrokeThickness="2" />
 </UserControl>
