--- a/Mapper/MapperControl.xaml
+++ b/Mapper/MapperControl.xaml
@@ -38,7 +38,22 @@
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type l:XsltForEachViewModel}">
-            <ItemsControl ItemsSource="{Binding Children}" />
+            <StackPanel>
+                <ItemsControl ItemsSource="{Binding Children}" />
+                <Canvas>
+                    <l:Connector>
+                        <l:Connector.Geometry>
+                            <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*-">
+                                <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
+                                <Binding Path="SourcePort" />
+                                <Binding Path="Port" ElementName="sourceSchema" />
+                                <Binding Path="Port" ElementName="targetSchema" />
+                                <Binding Path="TargetPort" />
+                            </MultiBinding>
+                        </l:Connector.Geometry>
+                    </l:Connector>
+                </Canvas>
+            </StackPanel>
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type l:XsltMixedContentViewModel}">
@@ -47,36 +62,34 @@
                     <Grid>
                         <TextBlock Text="Converter" Padding="7, 3" />
                         <!--SOURCE CONNECTORS-->
-                        <ItemsControl ItemsSource="{Binding SourcePorts}">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Canvas>
-                                        <Path Stroke="LightGray" StrokeThickness="2">
-                                            <Path.Data>
-                                                <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*">
-                                                    <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
-                                                    <Binding />
-                                                    <Binding Path="Port" ElementName="sourceSchema" />
-                                                    <Binding Path="LeftPort" RelativeSource="{RelativeSource AncestorType=l:BlockControl}" />
-                                                </MultiBinding>
-                                            </Path.Data>
-                                        </Path>
-                                    </Canvas>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                        <!--TARGET CONNECTOR-->
                         <Canvas>
-                            <Path Stroke="LightGray" StrokeThickness="2">
-                                <Path.Data>
-                                    <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*">
+                            <ItemsControl ItemsSource="{Binding SourcePorts}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <l:Connector>
+                                            <l:Connector.Geometry>
+                                                    <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="-*">
+                                                        <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
+                                                        <Binding />
+                                                        <Binding Path="Port" ElementName="sourceSchema" />
+                                                        <Binding Path="LeftPort" RelativeSource="{RelativeSource AncestorType=l:BlockControl}" />
+                                                    </MultiBinding>
+                                            </l:Connector.Geometry>
+                                        </l:Connector>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <!--TARGET CONNECTOR-->
+                            <l:Connector>
+                                <l:Connector.Geometry>
+                                    <MultiBinding Converter="{StaticResource thumbsPathConverter}" ConverterParameter="*-">
                                         <Binding RelativeSource="{RelativeSource AncestorType=Canvas}" />
-                                        <Binding Path="TargetPort" />
-                                        <Binding Path="Port" ElementName="targetSchema" />
                                         <Binding Path="RightPort" RelativeSource="{RelativeSource AncestorType=l:BlockControl}" />
+                                        <Binding Path="Port" ElementName="targetSchema" />
+                                        <Binding Path="TargetPort" />
                                     </MultiBinding>
-                                </Path.Data>
-                            </Path>
+                                </l:Connector.Geometry>
+                            </l:Connector>
                         </Canvas>
                     </Grid>
                 </l:BlockControl.HeaderContent>
