--- a/Mapper/MainWindow.xaml
+++ b/Mapper/MainWindow.xaml
@@ -5,9 +5,12 @@
         Title="Mapper"
         Closing="Window_Closing"
         x:Name="window">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibility"/>
+    </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="File">
+            <MenuItem Header="_File">
                 <MenuItem Header="_New" Click="New_Click" />
                 <MenuItem Header="_Open" Click="Open_Click" />
                 <MenuItem Header="_Save" Click="Save_Click" />
@@ -15,7 +18,26 @@
                 <Separator />
                 <MenuItem Header="_Exit" Click="Exit_Click" />
             </MenuItem>
+            <MenuItem Header="S_cript">
+                <MenuItem Header="_Run" Click="Run_Click" />
+            </MenuItem>
         </Menu>
+        <StackPanel DockPanel.Dock="Bottom" Visibility="{Binding Model.HasMessages, Converter={StaticResource BoolToVisibility}, ElementName=window}">
+            <Thumb Cursor="SizeNS" DragDelta="Thumb_DragDelta" Height="5" MouseDoubleClick="Thumb_MouseDoubleClick">
+                <Thumb.Template>
+                    <ControlTemplate>
+                        <Separator />
+                    </ControlTemplate>
+                </Thumb.Template>
+            </Thumb>
+            <ListBox x:Name="messagePanel" ItemsSource="{Binding Model.Messages, ElementName=window}" Height="100" VirtualizingPanel.IsContainerVirtualizable="False">
+                <ListBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Clear" Click="Clear_Click" />
+                    </ContextMenu>
+                </ListBox.ContextMenu>
+            </ListBox>
+        </StackPanel>
         <l:MapperControl DataContext="{Binding Model, ElementName=window}" />
     </DockPanel>
 </Window>
